// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<AccountUserSettingsTab /> common view snapshot should render red list section feature is enabled 1`] = `
<div>
  <div
    class="mx_SettingsTab"
    data-testid="mx_AccountUserSettingsTab"
  >
    <div
      class="mx_SettingsTab_sections"
    >
      <div
        class="mx_SettingsSection"
      >
        <div
          class="mx_SettingsSection_subSections"
        >
          <div
            class="mx_SettingsSection"
          >
            <h2
              class="mx_Heading_h3"
            >
              Profile
            </h2>
            <div
              class="mx_SettingsSection_subSections"
            >
              <div
                class="mx_UserProfileSettings"
              >
                <div>
                  Your account is managed separately by an identity provider and so some of your personal information can’t be changed here.
                </div>
                <div
                  class="mx_UserProfileSettings_profile"
                >
                  <div
                    aria-label="Profile picture"
                    class="mx_AvatarSetting_avatar"
                    role="group"
                  >
                    <div
                      aria-disabled="true"
                      class="mx_AccessibleButton mx_AvatarSetting_avatarDisplay mx_AccessibleButton_disabled"
                      disabled=""
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="_avatar_va14e_8 mx_BaseAvatar _avatar-imageless_va14e_55"
                        data-color="2"
                        data-testid="avatar-img"
                        data-type="round"
                        role="presentation"
                        style="--cpd-avatar-size: 90px;"
                      />
                    </div>
                  </div>
                  <form
                    class="_root_19upo_16 mx_UserProfileSettings_profile_displayName"
                  >
                    <div
                      class="_field_19upo_26"
                    >
                      <label
                        class="_label_19upo_59"
                        for="radix-_r_a_"
                      >
                        Display Name
                      </label>
                      <div
                        class="_controls_17lij_8"
                      >
                        <input
                          class="_control_d83jn_10"
                          disabled=""
                          id="radix-_r_a_"
                          name="input"
                          title=""
                          value=""
                        />
                      </div>
                    </div>
                  </form>
                </div>
                <div
                  class="mx_UserProfileSettings_profile_controls_userId"
                >
                  <div
                    class="mx_UserProfileSettings_profile_controls_userId_label"
                    id="_r_b_"
                  >
                    Username
                  </div>
                  <span
                    aria-labelledby="_r_b_"
                    class="mx_CopyableText mx_CopyableText_border"
                  >
                    @alice:server.org
                    <button
                      aria-label="Copy"
                      class="mx_AccessibleButton mx_CopyableText_copyButton"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
                        />
                        <path
                          d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
                        />
                      </svg>
                    </button>
                  </span>
                </div>
                <div
                  class="_flex_4dswl_9 mx_UserProfileSettings_profile_buttons"
                  style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
                >
                  <div
                    class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_outline"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      class="mx_UserProfileSettings_accountmanageIcon"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 12.031q0-.424.288-.712A.97.97 0 0 1 10 11.03h7.15l-1.875-1.875a.96.96 0 0 1-.3-.7q0-.4.325-.725a.93.93 0 0 1 .712-.287.98.98 0 0 1 .688.287l3.6 3.6q.15.15.212.325.063.175.063.375 0 .201-.062.375a.9.9 0 0 1-.213.325l-3.6 3.6q-.3.3-.712.288a.98.98 0 0 1-.688-.288 1.02 1.02 0 0 1-.312-.712.93.93 0 0 1 .287-.713l1.875-1.875H10a.97.97 0 0 1-.712-.287A.97.97 0 0 1 9 12.03m-6-7q0-.824.588-1.412A1.93 1.93 0 0 1 5 3.03h6q.424 0 .713.288.287.287.287.712t-.287.713A.97.97 0 0 1 11 5.03H5v14h6q.424 0 .713.288.287.287.287.712t-.287.713a.97.97 0 0 1-.713.287H5q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19.03z"
                      />
                    </svg>
                    Remove this device
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_SettingsSubsection"
          >
            <div
              class="mx_SettingsSubsectionHeading"
            >
              <h2
                class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
              >
                settings
              </h2>
            </div>
            <div
              class="mx_SettingsSubsection_content mx_SettingsSubsection_contentStretch"
            >
              <div
                class="mx_SettingsSubsection_description"
              >
                <span>
                  settings
                </span>
                <div
                  class="mx_SettingsSubsection_text"
                >
                  settings
                </div>
              </div>
              <div
                aria-labelledby="mail-signature"
                class="mx_CopyableText mx_CopyableText_border"
              >
                <div
                  class="mx_TchapMailSignature"
                >
                  
        
                  <table
                    cellpadding="0"
                    style="border-collapse:collapse;font-size:12.1px;color:#222222;"
                    width="350"
                  >
                    
            
                    <tbody>
                      <tr>
                        
                
                        <td
                          style="margin:0.1px;padding:0;"
                        >
                          
                    
                          <table
                            cellpadding="0"
                            style="border-collapse:collapse;"
                          >
                            
                        
                            <tbody>
                              <tr>
                                
                            
                                <td
                                  style="margin:0px;padding:0 10px 0 0;"
                                  valign="top"
                                >
                                  
                                
                                  <img
                                    alt="Tchap"
                                    src="https://www.tchap.gouv.fr/vector-icons/120.png"
                                    style="display:block;min-width:50px;"
                                    width="50"
                                  />
                                  
                            
                                </td>
                                
                            
                                <td
                                  style="margin:0px;padding:0 10px 0 0;"
                                  valign="top"
                                >
                                  
                                
                                  <table
                                    cellpadding="0"
                                    cellspacing="0"
                                    style="border-collapse:collapse;"
                                  >
                                    
                                    
                                    <tbody>
                                      <tr>
                                        
                                        
                                        <td
                                          style="margin:0px;padding:0;font:15px/19px Arial, Helvetica, sans-serif;color:#000091; font-weight: bold;"
                                        >
                                          
                                            
                                          <a
                                            href="https://matrix.to/#/@alice:server.org"
                                            style="sans-serif;color:#000091; font-weight: bold; text-decoration: none;"
                                          >
                                            Contactez-moi sur Tchap
                                          </a>
                                          
                                        
                                        </td>
                                        
                                    
                                      </tr>
                                      
                                    
                                      <tr>
                                        
                                        
                                        <td
                                          style="margin:0px;padding:1px 0;font:12.1px/15.3px Arial, Helvetica, sans-serif;color:#000001;"
                                        >
                                          
                                            
                                          <span>
                                            La messagerie instantanée du secteur public.
                                            <br />
                                          </span>
                                          
                                            
                                          <span>
                                            Disponible via 
                                            <a
                                              href="https://www.tchap.gouv.fr/"
                                              style="color:#222222;"
                                            >
                                              tchap.gouv.fr
                                            </a>
                                             et sur app mobiles.
                                          </span>
                                          
                                        
                                        </td>
                                        
                                    
                                      </tr>
                                      
                                
                                    </tbody>
                                  </table>
                                  
                            
                                </td>
                                
                        
                              </tr>
                              
                    
                            </tbody>
                          </table>
                          
                
                        </td>
                        
            
                      </tr>
                      
        
                    </tbody>
                  </table>
                  
    
                </div>
                <div
                  aria-label="Copy"
                  class="mx_AccessibleButton mx_CopyableText_copyButton"
                  role="button"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_SettingsSubsection"
          >
            <div
              class="mx_SettingsSubsectionHeading"
            >
              <h2
                class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
              >
                settings
              </h2>
            </div>
            <div
              class="mx_SettingsSubsection_content mx_SettingsSubsection_contentStretch"
            >
              <div
                class="mx_SettingsFlag"
              >
                <label
                  class="mx_SettingsFlag_label"
                  for="redList-toggle"
                >
                  <span
                    class="mx_SettingsFlag_labelText"
                  >
                    settings
                  </span>
                  <div
                    class="mx_SettingsFlag_microcopy"
                  >
                    settings
                  </div>
                </label>
                <div
                  aria-checked="false"
                  aria-disabled="false"
                  aria-label="settings"
                  class="mx_AccessibleButton mx_ToggleSwitch mx_ToggleSwitch_enabled"
                  id="redList-toggle"
                  role="switch"
                  tabindex="0"
                >
                  <div
                    class="mx_ToggleSwitch_ball"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mx_SettingsSection"
      >
        <h2
          class="mx_Heading_h3"
        >
          Deactivate Account
        </h2>
        <div
          class="mx_SettingsSection_subSections"
        >
          <div
            class="mx_SettingsSubsection"
            data-testid="account-management-section"
          >
            <div
              class="mx_SettingsSubsectionHeading"
            >
              <h3
                class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
              >
                Account management
              </h3>
            </div>
            <div
              class="mx_SettingsSubsection_description"
            >
              <div
                class="mx_SettingsSubsection_text"
              >
                Deactivating your account is a permanent action — be careful!
              </div>
            </div>
            <div
              class="mx_SettingsSubsection_content"
            >
              <div
                class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger"
                role="button"
                tabindex="0"
              >
                Deactivate Account
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountUserSettingsTab /> common view snapshot should render section when account deactivation feature is enabled 1`] = `
<div>
  <div
    class="mx_SettingsTab"
    data-testid="mx_AccountUserSettingsTab"
  >
    <div
      class="mx_SettingsTab_sections"
    >
      <div
        class="mx_SettingsSection"
      >
        <div
          class="mx_SettingsSection_subSections"
        >
          <div
            class="mx_SettingsSection"
          >
            <h2
              class="mx_Heading_h3"
            >
              Profile
            </h2>
            <div
              class="mx_SettingsSection_subSections"
            >
              <div
                class="mx_UserProfileSettings"
              >
                <div>
                  Your account is managed separately by an identity provider and so some of your personal information can’t be changed here.
                </div>
                <div
                  class="mx_UserProfileSettings_profile"
                >
                  <div
                    aria-label="Profile picture"
                    class="mx_AvatarSetting_avatar"
                    role="group"
                  >
                    <div
                      aria-disabled="true"
                      class="mx_AccessibleButton mx_AvatarSetting_avatarDisplay mx_AccessibleButton_disabled"
                      disabled=""
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="_avatar_va14e_8 mx_BaseAvatar _avatar-imageless_va14e_55"
                        data-color="2"
                        data-testid="avatar-img"
                        data-type="round"
                        role="presentation"
                        style="--cpd-avatar-size: 90px;"
                      />
                    </div>
                  </div>
                  <form
                    class="_root_19upo_16 mx_UserProfileSettings_profile_displayName"
                  >
                    <div
                      class="_field_19upo_26"
                    >
                      <label
                        class="_label_19upo_59"
                        for="radix-_r_0_"
                      >
                        Display Name
                      </label>
                      <div
                        class="_controls_17lij_8"
                      >
                        <input
                          class="_control_d83jn_10"
                          disabled=""
                          id="radix-_r_0_"
                          name="input"
                          title=""
                          value=""
                        />
                      </div>
                    </div>
                  </form>
                </div>
                <div
                  class="mx_UserProfileSettings_profile_controls_userId"
                >
                  <div
                    class="mx_UserProfileSettings_profile_controls_userId_label"
                    id="_r_1_"
                  >
                    Username
                  </div>
                  <span
                    aria-labelledby="_r_1_"
                    class="mx_CopyableText mx_CopyableText_border"
                  >
                    @alice:server.org
                    <button
                      aria-label="Copy"
                      class="mx_AccessibleButton mx_CopyableText_copyButton"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
                        />
                        <path
                          d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
                        />
                      </svg>
                    </button>
                  </span>
                </div>
                <div
                  class="_flex_4dswl_9 mx_UserProfileSettings_profile_buttons"
                  style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
                >
                  <div
                    class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_outline"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      class="mx_UserProfileSettings_accountmanageIcon"
                      fill="currentColor"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 12.031q0-.424.288-.712A.97.97 0 0 1 10 11.03h7.15l-1.875-1.875a.96.96 0 0 1-.3-.7q0-.4.325-.725a.93.93 0 0 1 .712-.287.98.98 0 0 1 .688.287l3.6 3.6q.15.15.212.325.063.175.063.375 0 .201-.062.375a.9.9 0 0 1-.213.325l-3.6 3.6q-.3.3-.712.288a.98.98 0 0 1-.688-.288 1.02 1.02 0 0 1-.312-.712.93.93 0 0 1 .287-.713l1.875-1.875H10a.97.97 0 0 1-.712-.287A.97.97 0 0 1 9 12.03m-6-7q0-.824.588-1.412A1.93 1.93 0 0 1 5 3.03h6q.424 0 .713.288.287.287.287.712t-.287.713A.97.97 0 0 1 11 5.03H5v14h6q.424 0 .713.288.287.287.287.712t-.287.713a.97.97 0 0 1-.713.287H5q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19.03z"
                      />
                    </svg>
                    Remove this device
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_SettingsSubsection"
          >
            <div
              class="mx_SettingsSubsectionHeading"
            >
              <h2
                class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
              >
                settings
              </h2>
            </div>
            <div
              class="mx_SettingsSubsection_content mx_SettingsSubsection_contentStretch"
            >
              <div
                class="mx_SettingsSubsection_description"
              >
                <span>
                  settings
                </span>
                <div
                  class="mx_SettingsSubsection_text"
                >
                  settings
                </div>
              </div>
              <div
                aria-labelledby="mail-signature"
                class="mx_CopyableText mx_CopyableText_border"
              >
                <div
                  class="mx_TchapMailSignature"
                >
                  
        
                  <table
                    cellpadding="0"
                    style="border-collapse:collapse;font-size:12.1px;color:#222222;"
                    width="350"
                  >
                    
            
                    <tbody>
                      <tr>
                        
                
                        <td
                          style="margin:0.1px;padding:0;"
                        >
                          
                    
                          <table
                            cellpadding="0"
                            style="border-collapse:collapse;"
                          >
                            
                        
                            <tbody>
                              <tr>
                                
                            
                                <td
                                  style="margin:0px;padding:0 10px 0 0;"
                                  valign="top"
                                >
                                  
                                
                                  <img
                                    alt="Tchap"
                                    src="https://www.tchap.gouv.fr/vector-icons/120.png"
                                    style="display:block;min-width:50px;"
                                    width="50"
                                  />
                                  
                            
                                </td>
                                
                            
                                <td
                                  style="margin:0px;padding:0 10px 0 0;"
                                  valign="top"
                                >
                                  
                                
                                  <table
                                    cellpadding="0"
                                    cellspacing="0"
                                    style="border-collapse:collapse;"
                                  >
                                    
                                    
                                    <tbody>
                                      <tr>
                                        
                                        
                                        <td
                                          style="margin:0px;padding:0;font:15px/19px Arial, Helvetica, sans-serif;color:#000091; font-weight: bold;"
                                        >
                                          
                                            
                                          <a
                                            href="https://matrix.to/#/@alice:server.org"
                                            style="sans-serif;color:#000091; font-weight: bold; text-decoration: none;"
                                          >
                                            Contactez-moi sur Tchap
                                          </a>
                                          
                                        
                                        </td>
                                        
                                    
                                      </tr>
                                      
                                    
                                      <tr>
                                        
                                        
                                        <td
                                          style="margin:0px;padding:1px 0;font:12.1px/15.3px Arial, Helvetica, sans-serif;color:#000001;"
                                        >
                                          
                                            
                                          <span>
                                            La messagerie instantanée du secteur public.
                                            <br />
                                          </span>
                                          
                                            
                                          <span>
                                            Disponible via 
                                            <a
                                              href="https://www.tchap.gouv.fr/"
                                              style="color:#222222;"
                                            >
                                              tchap.gouv.fr
                                            </a>
                                             et sur app mobiles.
                                          </span>
                                          
                                        
                                        </td>
                                        
                                    
                                      </tr>
                                      
                                
                                    </tbody>
                                  </table>
                                  
                            
                                </td>
                                
                        
                              </tr>
                              
                    
                            </tbody>
                          </table>
                          
                
                        </td>
                        
            
                      </tr>
                      
        
                    </tbody>
                  </table>
                  
    
                </div>
                <div
                  aria-label="Copy"
                  class="mx_AccessibleButton mx_CopyableText_copyButton"
                  role="button"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mx_SettingsSection"
      >
        <h2
          class="mx_Heading_h3"
        >
          Deactivate Account
        </h2>
        <div
          class="mx_SettingsSection_subSections"
        >
          <div
            class="mx_SettingsSubsection"
            data-testid="account-management-section"
          >
            <div
              class="mx_SettingsSubsectionHeading"
            >
              <h3
                class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
              >
                Account management
              </h3>
            </div>
            <div
              class="mx_SettingsSubsection_description"
            >
              <div
                class="mx_SettingsSubsection_text"
              >
                Deactivating your account is a permanent action — be careful!
              </div>
            </div>
            <div
              class="mx_SettingsSubsection_content"
            >
              <div
                class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger"
                role="button"
                tabindex="0"
              >
                Deactivate Account
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
